# ReturnOfModding

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  changelog_gen.txt  last_release_hash.txt  linux_build.sh  lua_doc_gen.txt
.github/workflows/: nightly.yml
cmake_scripts/: cpp-semver.cmake  cxxopts.cmake  lua.cmake  mimalloc.cmake  polyhook.cmake  rom.cmake  tomlplusplus.cmake
docs/lua/classes/: CCode.md  CInstance.md  CScriptRef.md  RValue.md  RefDynamicArrayOfRValue.md  YYObjectBase.md  config.config_definition.md  config.config_entry.md  config.config_file.md  pointer.md
docs/lua/classes/definitions/: CCode.lua  CInstance.lua  CScriptRef.lua  RValue.lua  RefDynamicArrayOfRValue.lua  YYObjectBase.lua  config.config_definition.lua  config.config_entry.lua  config.config_file.lua  lua_patch.lua  pointer.lua  value_wrapper.lua
docs/lua/tables/: CInstance.md  EVariableType.md  ImGui.md  RValue.md  RValueType.md  YYObjectBaseType.md  _ENV - Plugin Specific Global Table.md  _G.md  _ROM.md  config.md  gm.CInstance.md  gm.md  gui.md  log.md  memory.md  mods.md  path.md  paths.md  toml.md
docs/lua/tables/definitions/: EVariableType.lua  RValue.lua  RValueType.lua  YYObjectBaseType.lua  _ENV - Plugin Specific Global Table.lua  _G.lua  _ROM.lua  config.lua  gm.CInstance.lua  gm.lua  gui.lua  log.lua  memory.lua  mods.lua  path.lua  paths.lua
docs/lua_docs_generator/: doc_gen.py
examples/lua/ReturnOfModding-DebugToolkit/: lib_debug.lua  main.lua
examples/lua/ReturnOfModding-GlobalExtensions/: hardcoded.lua  main.lua
examples/lua/ReturnOfModding-ObjectBrowser/: main.lua  manifest.json
examples/lua/ReturnOfModding-ScriptConsole/: main.lua  manifest.json
examples/lua/sarn-coolguy/: main.lua  manifest.json
examples/lua/sarn-coolguy_setup/: manifest.json  survivor_setup.lua
examples/plugins/ReturnOfModding-DebugToolkit/: lib_debug.lua  main.lua  manifest.json
examples/plugins/ReturnOfModding-GlobalExtensions/: hardcoded.lua  main.lua  manifest.json
examples/plugins/ReturnOfModding-ObjectBrowser/: main.lua
examples/plugins/ReturnOfModding-ScriptConsole/: main.lua  manifest.json
examples/plugins/ReturnOfModding-ShareItem/: main.lua  manifest.json
examples/plugins/ReturnOfModding-SpriteManipulator/: main.lua  manifest.json
examples/plugins/sarn-coolguy/: main.lua  manifest.json
examples/plugins/sarn-coolguy_setup/: main.lua  survivor_setup.lua
examples/plugins_data/ReturnOfModding-ScriptConsole/: autoexec.lua  autoexec.txt
src/: common.hpp  main.cpp  pointers.cpp  pointers.hpp  resources.rc  version.hpp
src/bits/: bits.hpp
src/config/: config.cpp  config.hpp  config_entry.hpp
src/debug/: debug.hpp
src/dll_proxy/: dll_proxy.cpp  dll_proxy.hpp  version.def
src/file_manager/: cache_file.cpp  cache_file.hpp  file.cpp  file.hpp  file_manager.cpp  file_manager.hpp  file_watcher.hpp  folder.cpp  folder.hpp
src/fonts/: fonts.hpp  icons.cpp  storopia.cpp
src/gui/: gui.cpp  gui.hpp  imgui_config.hpp  renderer.cpp  renderer.hpp
src/gui/components/: components.hpp  custom_text.cpp  icon.cpp  input_text.cpp  input_text_with_hint.cpp  options_modal.cpp  selectable.cpp  small.cpp  sub_title.cpp  title.cpp
src/gui/widgets/: imgui_bitfield.hpp  imgui_hotkey.hpp
src/hooks/: call_hook.cpp  call_hook.hpp  detour_hook.cpp  detour_hook.hpp  hooking.cpp  hooking.hpp  vmt_hook.cpp  vmt_hook.hpp  vtable_hook.cpp  vtable_hook.hpp
src/input/: hotkey.cpp  hotkey.hpp  is_key_pressed.hpp
src/json/: json.hpp
src/logger/: exception_handler.cpp  exception_handler.hpp  logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp
src/lua/: load_module_result.hpp  lua_manager.cpp  lua_manager.hpp  lua_manager_extension.cpp  lua_manager_extension.hpp  lua_memory_alloc.cpp  lua_memory_alloc.hpp  lua_module.cpp  lua_module.hpp  lua_module_ext.hpp  lua_patch.cpp  lua_patch.hpp  module_info.hpp
src/lua/bindings/: game_maker.cpp  game_maker.hpp  global_table.cpp  gui.cpp  gui.hpp  gui_element.hpp  gui_ext.cpp  gui_ext.hpp  imgui.hpp  imgui_window.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  path.cpp  path.hpp  paths.cpp  paths.hpp  raw_imgui_callback.cpp  raw_imgui_callback.hpp
src/lua/bindings/toml/: Options.hpp  toml_lua.cpp  toml_lua.hpp
src/lua/bindings/toml/DataTypes/DateAndTime/: dateAndTime.cpp  dateAndTime.hpp
src/lua/bindings/toml/DataTypes/TOMLInt/: TOMLInt.cpp  TOMLInt.hpp
src/lua/bindings/toml/decoding/: decoding.cpp  decoding.hpp
src/lua/bindings/toml/encoding/: encoding.cpp  encoding.hpp
src/lua/bindings/toml/utilities/: utilities.cpp  utilities.hpp
src/math/: math.hpp
src/memory/: batch.hpp  byte_patch.cpp  byte_patch.hpp  byte_patch_manager.cpp  byte_patch_manager.hpp  fwddec.hpp  handle.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  range.cpp  range.hpp  signature.hpp
src/paths/: paths.cpp  paths.hpp  root_folder.hpp
src/rorr/: rorr_hooks.hpp  rorr_pointers.hpp  rorr_pointers_layout_info.hpp
src/rorr/gm/: CCode.hpp  CDynamicArray.hpp  CHashMap.hpp  CInstance.cpp  CInstance.hpp  CInstance_hooks.hpp  CObjectGM.hpp  CRoom.hpp  CScript.hpp  CScriptRef.hpp  Code_Execute.hpp  Code_Execute_hook.hpp  Code_Execute_trace.hpp  Code_Function_GET_the_function.hpp  Code_Function_GET_the_function_t.hpp  EJSRetValBool.hpp  EVariableType.hpp  GetSaveFileName_hook.hpp  GetSaveFileName_t.hpp  MemoryManager.hpp  MemoryManager_ReAlloc.hpp  MurMurHash.cpp  MurMurHash.hpp  ObjectEventPerform_hook.hpp  RToken.hpp  RVKind.hpp  RValue.cpp  RValue.hpp  RVariableRoutine.hpp  RefThing.cpp  Script_Data.hpp  StructCreate.hpp  VMBuffer.hpp  VMExec.hpp  Variable_BuiltIn.hpp  YYGMLException.hpp  YYGMLFuncs.hpp  YYObjectBase.hpp  YYSetScriptRef.hpp  YYShader.cpp  (+6 more)
src/string/: compile_time_str.hpp  hash.hpp  string.hpp  string_conversions.hpp
src/threads/: thread_pool.cpp  thread_pool.hpp  util.cpp  util.hpp
src/thunderstore/v1/: manifest.hpp
src/tlsf/: tlsf.cpp
src/win_registry/: win_registry.hpp
thunderstore/: thunderstore.toml
